# ohua-rust-benchmarks

./: .gitignore  README.md  benchmark.sh  new_compiler_baseline.sh  paper-run.sh
bayes/: Cargo.toml  adtree.rs  data.rs  learner.rs  net.rs  query.rs
bayes/src/: main.rs
bayes/src/bayes/: adtree.rs  data.rs  learner.rs  mod.rs  net.rs  query.rs
blackscholes/: Cargo.toml  bench.sh
blackscholes/src/: lib.rs  ohua_futures.ohuac
blackscholes_new_compiler/: Cargo.toml  benchmark.sh  ohua-compile.sh  ohua-config.yaml
blackscholes_new_compiler/src/: generated.rs  main.rs  nested.rs  opt.rs  original.rs  types.rs  un_safe.rs
canneal/: Cargo.toml  benchmark.sh  benchmark_with_unsafe.sh
canneal/src/: annealer.ohuac  lib.rs  netlist.rs  ohua_netlist.rs  stm_netlist.rs
canneal_new_compiler/: .Cargo.toml.swp  Cargo.toml  benchmark.sh
canneal_new_compiler/src/: .generated.rs.swp  .main.rs.swp  .types.rs.swp  generated.rs  main.rs  original.rs  types.rs
genome/: Cargo.toml  full_benchmark.sh  ohua-compile.sh  ohua-config.yaml
genome/src/: bitmap.rs  dstm_sequencer.rs  gene.rs  lib.rs  ohua.rs  ohua_sequencer.rs  segments.rs  sequencer.rs  stm_sequencer.rs
genome/src/algos/: future_sequencer.ohuac  partitioning_sequencer.ohuac  sequencer.ohuac
intruder/: Cargo.toml  README.md  bench.sh  bench_1_16.sh  full_benchmark.sh  ohua-compile.sh  ohua-config.yaml
intruder/generator/split/: generate.py
intruder/generator/split/template/: ohua_split.rs  split_detector.ohuac
intruder/src/: decoder.rs  detector.rs  dstm.rs  intruder_detector.ohuac  lib.rs  ohua.rs  seq.rs  stm.rs
intruder/src/algos/: futures.ohuac  split_detector.ohuac
intruder/src/decoder/: mod.rs  simple.rs  stm_decoder.rs
kmeans/: Cargo.toml
kmeans/src/: lib.rs  stm_centroid.rs
kmeans/src/algos/: kmeans.ohuac  kmeans_future.ohuac
kmeans_new_compiler/: Cargo.toml  benchmark.sh
kmeans_new_compiler/src/: generated.rs  main.rs  original.rs  types.rs
labyrinth/: Cargo.toml  README.md  bench-faked-split-versions.sh  bench-freq-stm.sh  bench-futures-cmp-versions.sh  bench-futures-new.sh  bench-futures.sh  bench-split4-freq.sh  ohua-compile.sh  ohua-config.yaml
labyrinth/inputs/: lab_maker.py
labyrinth/inputs/faked/: 32x32x3_96.txt  48x48x3_64.txt  x128-y128-z5-n128.txt  x256-y256-z5-n256.txt
labyrinth/scripts/: frequency-stm.py
labyrinth/src/: build.sh  grid.rs  labyrinth_types.rs  lib.rs  main.rs  ohua.yaml  parser.rs  pathfinder.rs  stm_grid.rs  transact.ohuac  types.rs
labyrinth/src/modified_algos/: alang-core.dump  alang-resolved.dump  dflang-core.dump  frequency.ohuac  futures.ohuac  futures_naive.ohuac  futures_opt.ohuac  split_frequency.ohuac  transact_localmaze_split2.ohuac  transact_sequentialized.ohuac  transact_split10.ohuac  transact_split2.ohuac  transact_split3.ohuac  transact_split4.ohuac  transact_split5.ohuac  transact_split6.ohuac  transact_split7.ohuac  transact_split8.ohuac  transact_split9.ohuac
labyrinth/src/modified_algos/generator/: generate.py  generate_combined.py  template.ohuac  template.rs  template.sh  template_comb.ohuac  template_comb.rs  template_comb.sh
labyrinth/src/ohua/: benchs.rs  grid.rs  less_arc.rs  mod.rs  no_pipeline2.rs  original.rs
labyrinth/src/original/: futures.rs  helpers.rs  mod.rs
labyrinth/src/stmseq/: grid.rs  mod.rs  pathfinder.rs  stm_grid.rs  types.rs
labyrinth_new_compiler/: Cargo.toml  benchmark-frequency.sh  benchmark.sh
labyrinth_new_compiler/src/: benchs.rs  generated.rs  generated.rs.bak  main.rs  no_amorphous.rs  no_data_par.rs  original.rs
labyrinth_no_pipelining/: Cargo.toml
labyrinth_no_pipelining/src/: benchs.rs  generated.rs  grid.rs  main.rs  parser.rs
labyrinth_verification/: Cargo.toml  ohua-compile.sh  ohua-config.yaml
labyrinth_verification/src/: lib.rs  parser.rs  types.rs
labyrinth_verification/src/ohua/: benchs.rs  grid.rs  less_arc.rs  mod.rs  original.rs
labyrinth_verification/src/stmseq/: grid.rs  mod.rs  pathfinder.rs  types.rs
preflowpush/: Cargo.toml
preflowpush/ohua/: algos.rs  functions.rs  std.rs
preflowpush/ohua/output/: algos.rs
preflowpush/src/: algos.rs  functions.rs  generated.rs  helpers.rs  lib.rs  relabelling.rs
ssca2/: Cargo.toml
ssca2/seq/: Cargo.toml
ssca2/seq/src/: generator.rs  graph.rs  main.rs  parameters.rs
ssca2/src/: compute.rs  generator.rs  graph.rs  lib.rs  main.rs  parameters.rs  types.rs
ssca2/stm/: Cargo.toml
ssca2/stm/src/: generator.rs  graph.rs  main.rs
vacation/: Cargo.toml  ohua-compile.sh  ohua-config.yaml
vacation/dstm/: Cargo.toml
vacation/dstm/src/: main.rs
vacation/dstm/src/vacation/: client.rs  mod.rs
vacation/seq/: Cargo.toml
vacation/seq/src/: main.rs
vacation/seq/src/vacation/: action.rs  client.rs  customer.rs  manager.rs  mod.rs  reservation.rs
vacation/seq/src/vacation/original/: client.rs  manager.rs
vacation/seq/src/vacation/prime/: client.rs  communication.rs  database.rs  mod.rs  server.rs
vacation/src/: main.rs
vacation/src/vacation/: action.rs  client.rs  customer.rs  manager.rs  mod.rs  operation.rs  reservation.rs
vacation/stm/: Cargo.toml
vacation/stm/src/: main.rs
vacation/stm/src/vacation/: client.rs  manager.rs  mod.rs  reservation.rs
vacation/stm/src/vacation/prime/: client.rs  communication.rs  database.rs  mod.rs  server.rs
verification/: Cargo.toml
verification/src/: verify.rs
yada/: Cargo.toml
yada/ohua/: Cargo.toml
yada/ohua/algo/: .algo.rs.swp  algo.rs  element.rs  main.rs  mesh.rs  ohuac  std.rs
yada/ohua/src/: algo.rs  cavity.rs  element.rs  generated.rs  main.rs  mesh.rs  point.rs
yada/seq/src/: cavity.rs  element.rs  lib.rs  main.rs  mesh.rs  point.rs
yada/src/: cavity.rs  element.rs  lib.rs  mesh.rs  point.rs
yada/stm/: Cargo.toml
yada/stm/src/: cavity.rs  element.rs  main.rs  mesh.rs  point.rs
