[package]
name = "blackscholes"
version = "0.1.0"
authors = ["Felix Wittwer <dev@felixwittwer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", optional = true }
cpu-time = { version = "1.0", optional = true }


[features]
cli = ["clap", "cpu-time"]

[[bin]]
name = "sequential"
path = "src/bin/seq.rs"
required-features = ["cli"]

[[bin]]
name = "par"
path = "src/bin/threaded.rs"
required-features = ["cli"]

[[bin]]
name = "locked"
path = "src/bin/locking.rs"
required-features = ["cli"]

