[package]
name = "canneal"
version = "0.1.0"
authors = ["Felix Wittwer <dev@felixwittwer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_chacha = "0.3"

clap = { version = "2.33", optional = true }
cpu-time = { version = "1.0", optional = true }

stm = { git = "https://github.com/feliix42/rust-stm", optional = true }

# Ohua stuff
ohua_codegen = { git = "https://github.com/ohua-dev/ohua-rust-runtime", optional = true }
ohua_runtime = { git = "https://github.com/ohua-dev/ohua-rust-runtime", optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }

[features]
cli = ["clap", "cpu-time"]
transactional = ["stm"]
ohua = ["ohua_codegen", "ohua_runtime"]
future = ["ohua", "tokio"]

[[bin]]
name = "sequential"
path = "src/bin/seq.rs"
required-features = ["cli"]

[[bin]]
name = "stm"
path = "src/bin/stm.rs"
required-features = ["transactional", "cli"]

[[bin]]
name = "ohua_futures"
path = "src/bin/ohua.rs"
required-features = ["ohua", "cli", "future"]