[package]
name = "canneal"
version = "0.1.0"
authors = ["Felix Suchert <dev@felixsuchert.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_chacha = "0.3"

clap = { version = "2.33", optional = true }
cpu-time = { version = "1.0", optional = true }

stm = { git = "https://github.com/feliix42/rust-stm", optional = true }

[features]
cli = ["clap", "cpu-time"]
transactional = ["stm"]
less_tx = []

[[bin]]
name = "sequential"
path = "src/bin/seq.rs"
required-features = ["cli"]

[[bin]]
name = "stm"
path = "src/bin/stm.rs"
required-features = ["transactional", "cli"]

[[bin]]
name = "stm_small_tx"
path = "src/bin/stm_small_tx.rs"
required-features = ["transactional", "cli", "less_tx"]

[[bin]]
name = "dstm"
path = "src/bin/dstm.rs"
required-features = ["transactional", "cli"]

