[package]
name = "canneal_new_compiler"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_chacha = "0.3"

clap = "2.33"
cpu-time = "1.0"
tokio = { version = "0.2", features = ["full"] }
