[package]
name = "genome"
version = "0.1.0"
authors = ["Felix Wittwer <dev@felixwittwer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.2"
rand = "0.7"
clap = { version = "2.32", optional = true }
time = { version = "0.1", optional = true }
# my own patched version of stm
stm = { git = "https://github.com/feliix42/rust-stm", optional = true }


[features]
cli = ["time", "clap"]
transactional = ["stm"]

[[bin]]
name = "sequential"
path = "src/bin/seq.rs"
required-features = ["cli"]

[[bin]]
name = "stm"
path = "src/bin/stm.rs"
required-features = ["transactional", "cli"]
