[package]
name = "genome"
version = "0.1.0"
authors = ["Felix Suchert <dev@felixsuchert.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.2"
rand = "0.7"
clap = "2.32"
time = "0.1"
cpu-time = "1.0"

# my own patched version of stm
stm = { git = "https://github.com/feliix42/rust-stm" }
stm-datastructures = { git = "https://github.com/feliix42/stm-datastructures" }

# Ohua stuff
tokio = { version = "0.2", features = ["full"] }

itertools = "0.10"
jemallocator = "0.5.0"

[features]
verify = []


[[bin]]
name = "sequential"
path = "src/bin/seq.rs"

[[bin]]
name = "stm"
path = "src/bin/stm.rs"

[[bin]]
name = "dstm"
path = "src/bin/dstm.rs"

[[bin]]
name = "ohua"
path = "src/bin/ohua.rs"

