[package]
name = "intruder"
version = "0.1.0"
authors = ["Felix Wittwer <dev@felixwittwer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.2"
clap = { version = "2.32", optional = true }
ohua_codegen = { git = "https://github.com/ohua-dev/ohua-rust-runtime", optional = true }
ohua_runtime = { git = "https://github.com/ohua-dev/ohua-rust-runtime", optional = true }
# use patched version of rust-stm
stm = { git = "https://github.com/feliix42/rust-stm", optional = true } #, branch = "retry-count" }
# stm = { git = "https://github.com/feliix42/rust-stm", optional = true, branch = "original_version" }
time = { version = "0.1", optional = true }
cpu-time = { version = "1.0", optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }

[features]
cli = ["time", "clap", "cpu-time"]
ohua = ["ohua_codegen", "ohua_runtime"]
transactional = ["stm"]
future = ["ohua", "tokio"]

[[bin]]
name = "sequential"
path = "src/bin/seq.rs"
required-features = ["cli"]

[[bin]]
name = "stm"
path = "src/bin/stm.rs"
required-features = ["transactional", "cli"]

[[bin]]
name = "ohua"
path = "src/bin/ohua.rs"
required-features = ["ohua", "cli"]

[[bin]]
name = "split2"
path = "src/bin/ohua_split.rs"
required-features = ["ohua", "cli"]

[[bin]]
name = "ohua_futures"
path = "src/bin/ohua_futures.rs"
required-features = ["ohua", "cli", "future"]
