[package]
name = "intruder"
version = "0.1.0"
authors = ["Felix Suchert <dev@felixsuchert.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.2"
clap = { version = "2.32" }
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "0.2", features = ["full"] }

# use patched version of rust-stm
stm = { git = "https://github.com/feliix42/rust-stm" } #, branch = "retry-count" }
stm-datastructures = { git = "https://github.com/feliix42/stm-datastructures" }

time = { version = "0.1" }
cpu-time = { version = "1.0" }

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

