[package]
name = "kmeans"
version = "0.1.0"
authors = ["Felix Wittwer <dev@felixwittwer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.2"
clap = { version = "2.23", optional = true }
time = { version = "0.1", optional = true }
cpu-time = { version = "1.0", optional = true }

[features]
cli = ["time", "clap", "cpu-time"]

[[bin]]
name = "sequential"
path = "src/bin/seq.rs"
required-features = ["cli"]

