[package]
name = "labyrinth"
version = "0.1.0"
authors = ["Felix Wittwer <dev@felixwittwer.de>"]
edition = "2018"

[dependencies]
clap = { version = "2.32", optional = true }
ohua_codegen = { git = "https://github.com/ohua-dev/ohua-rust-runtime", optional = true }
ohua_runtime = { git = "https://github.com/ohua-dev/ohua-rust-runtime", optional = true }
# use patched version of rust-stm
stm = { git = "https://github.com/feliix42/rust-stm", branch = "retry-count", optional = true }
time = { version = "0.1", optional = true }
cpu-time = { version = "1.0", optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }
# futures = { version = "0.1", optional = true }

[features]
cli = ["clap", "time", "cpu-time"]
ohua = ["ohua_codegen", "ohua_runtime"]
transactional = ["stm"]
future = ["ohua", "tokio"] #, "futures"]

[[bin]]
name = "sequential"
path = "src/bin/simple_sequential.rs"
required-features = ["cli"]

[[bin]]
name = "ohua"
path = "src/bin/ohua.rs"
required-features = ["ohua", "cli"]

[[bin]]
name = "stm"
path = "src/bin/stm.rs"
required-features = ["transactional", "cli"]

[[bin]]
name = "ohua_futures"
path = "src/bin/ohua_futures.rs"
required-features = ["ohua", "cli", "future"]
