[package]
name = "labyrinth"
version = "0.1.0"
authors = ["Felix Suchert <dev@felixsuchert.de>"]
edition = "2018"

[dependencies]
clap = { version = "2.32", optional = true }

# use patched version of rust-stm
# stm = { git = "https://github.com/feliix42/rust-stm", branch = "retry-count", optional = true }
stm = { git = "https://github.com/feliix42/rust-stm", optional = true }
time = { version = "0.1", optional = true }
cpu-time = { version = "1.0", optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }

jemallocator = "0.5.0"

[features]
cli = ["clap", "time", "cpu-time"]
transactional = ["stm"]
naive = []

[[bin]]
name = "sequential"
path = "src/bin/simple_sequential.rs"
required-features = ["cli"]

[[bin]]
name = "stm"
path = "src/bin/stm.rs"
required-features = ["transactional", "cli"]

[[bin]]
name = "dstm"
path = "src/bin/dstm.rs"
required-features = ["transactional", "cli"]

