[package]
name = "labyrinth"
version = "0.1.0"
authors = ["Felix Suchert <dev@felixsuchert.de>"]
edition = "2018"

[dependencies]
clap = "2.32"

# use patched version of rust-stm
# stm = { git = "https://github.com/feliix42/rust-stm", branch = "retry-count", optional = true }
stm = { git = "https://github.com/feliix42/rust-stm", optional = true }
time = "0.1"
cpu-time = "1.0"
tokio = { version = "0.2", features = ["full"] }

jemallocator = "0.5.0"

[features]
transactional = ["stm"]
naive = []

[[bin]]
name = "sequential"
path = "src/bin/simple_sequential.rs"

[[bin]]
name = "stm"
path = "src/bin/stm.rs"
required-features = ["transactional"]

[[bin]]
name = "dstm"
path = "src/bin/dstm.rs"
required-features = ["transactional"]

[[bin]]
name = "ohua"
path = "src/bin/ohua.rs"
