[package]
name = "labyrinth_new_compiler"
version = "0.1.0"
edition = "2018"
authors = ["Felix Wittwer <dev@felixwittwer.de"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# just taken over from other benchmark, some dependencies are terribly out of date!
clap = "2.32"
# use patched version of rust-stm
#stm = { git = "https://github.com/feliix42/rust-stm", branch = "retry-count", optional = true }
time = "0.1"
cpu-time = "1.0"
tokio = { version = "0.2", features = ["full"] }
# futures = { version = "0.1", optional = true }

jemallocator = "0.5.0"
