[package]
name = "preflow_push"
version = "0.1.0"
authors = ["Sebastian Ertel <sebastian.ertel@barkhauseninstitut.org>"]
edition = "2021"

[dependencies]
clap = { version = "2.33", optional = true }
cpu-time = { version = "1.0", optional = true }

# Ohua stuff
tokio = { version = "0.2", features = ["full"] }

[features]
cli = ["clap", "cpu-time"]
#future = ["tokio"]

[[bin]]
name = "sequential"
path = "src/bin/seq.rs"
required-features = ["cli"]

#[[bin]]
#name = "par"
#path = "src/bin/threaded.rs"
#required-features = ["cli"]
#
[[bin]]
name = "ohua_futures"
path = "src/bin/ohua.rs"
required-features = [ "cli" ] #["ohua", "cli", "future"]
