[package]
name = "ssca2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = [ "derive" ] } 

# seedable RNG
rand_chacha = "0.3"
rand_core = "0.6"

[[bin]]
name = "sequential"
path = "src/bin/seq.rs"
