[package]
name = "yada"
version = "0.1.0"
authors = ["Felix Wittwer <dev@felixwittwer.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", optional = true }
cpu-time = { version = "1.0", optional = true }

[features]
cli = ["clap", "cpu-time"]


[[bin]]
name = "sequential"
path = "src/bin/seq.rs"
required-features = ["cli"]
