[package]
name = "ssca2-seq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = [ "derive" ] } 
cpu-time = { version = "1.0" }

# seedable RNG
rand_chacha = "0.3"
rand_core = "0.6"

