[package]
name = "ssca2-stm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = [ "derive" ] } 
cpu-time = { version = "1.0" }

stm = { git = "https://github.com/feliix42/rust-stm", rev = "c0f823d3b4dfbf33c483a1785148404bd2a27c6d" }

# seedable RNG
rand_chacha = "0.3"
rand_core = "0.6"

