[package]
name = "seq-vacation"
version = "0.1.0"
authors = ["Sebastian Ertel <sebastian.ertel@barkhauseninstitut.org>", "Felix Suchert <dev@felixsuchert.de>"]
edition = "2018"

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3"

clap = { version = "3.2", features = [ "derive" ] }
cpu-time = "1.0"

strum = "0.24"
strum_macros = "0.24"